--- a/letters/covid19/index.html
+++ b/letters/covid19/index.html
@@ -64,14 +64,13 @@ border-top-left-radius: 50%;
     <div style="padding: 0 20px; color: #444">
 
 <p>
-April 1, 2020 | Sepcial brainlife.io announcement
+April 1, 2020 | Special brainlife.io announcement
 </p>
 
 <hr>
 
 <h3>To our brainlife.io community,</h3>
 
-<p>
 <p>
 We hope that you are staying healthy during these difficult times. Our team of students and researchers here at brainlife.io have certainly had their work affected by city and university lockdowns.
 </p>
@@ -80,10 +79,13 @@ We wanted to check in with our brainlife.io community and ensure our computing r
 </p>
 <p>
 If you run into any trouble during this time, please know you can always reach us in the #general channel of the <a href="https://brainlife-inviter.herokuapp.com/">brainlife.io Slack workspace</a>. Hopefully, that channel can also give you a sense of community during a time of isolation.
-<p>
-Please let our team know if you want to perform analyses that are not currently available on <a href="https://brainlife.io>brainlife.io</a> -- we are happy to help you implement your workflow! 
 </p>
+<p>
+Please let our team know if you want to perform analyses that are not currently available on <a href="https://brainlife.io/">brainlife.io</a> -- we are happy to help you implement your workflow! 
+</p>
+<p>
 Lastly, in an effort to contribute some help during these concerning times, we are trying to reach researchers and students who have had their neuroimaging data analyses disrupted due to stay-at-home orders. Please feel free to spread the word about brainlife.io to your colleagues who need our platform’s resources.
+</p>
 <p>
 Please contact us with any questions and take care. We wish you all the best!
 </p>
@@ -91,18 +93,8 @@ Please contact us with any questions and take care. We wish you all the best!
 Sincerely,
 The brainlife.io team
 </p>
-</p>
 
 <hr>
-                                 
-<h2>Questions or news to share?</h2>
-<p>
-Do you have a brainlife.io app, paper, project, or success story -- or a job or learning opportunity -- you want us to share with the rest of the community? <a href="mailto:smcgavin@iu.edu">Contact us</a> to submit any announcements! 
-</p>      
-    
-<p>
-Don't forget, if you run into any trouble on brainlife.io or want to ask a question about the platform, message Soichi (@hayashis) or Stephanie (@Steph) on Slack.
-</p>
 
 </div>
 
